# SpiderRock-Connect-SDK

./: .gitignore  .gitmodules  README.md
MLink/_c++/: CMakeLists.txt  README.md
MLink/_c++/examples/Linux/LiveImpliedQuote/: CMakeLists.txt  LiveImpliedQuoteMultipleStripes.cpp  LiveImpliedQuote_multiplestripes.cpp
MLink/_c++/examples/Linux/LiveSurfaceCurve/: CMakeLists.txt  livesurfaceprt.cpp
MLink/_c++/examples/Linux/StockPrint/: CMakeLists.txt  stkprt.cpp
MLink/_c++/examples/json_cpp/: json_cpp.cpp  json_cpp.vcxproj  json_cpp.vcxproj.filters  spiderrock_mlink.hpp
MLink/_c++/examples/json_cpp/LiveImpliedQuoteAdj/: LiveImpliedQuoteAdj.cpp  LiveImpliedQuoteAdj.sln  LiveImpliedQuoteAdj.vcxproj  LiveImpliedQuoteAdj.vcxproj.filters
MLink/_c++/examples/protobuf_cpp/LiveImpliedQuote/: LiveImpliedQuote.sln
MLink/_c++/examples/protobuf_cpp/SRAnalytics/: SRAnalytics.cpp  SRAnalytics.sln  SRAnalytics.vcxproj  SRAnalytics.vcxproj.filters
MLink/_c++/headers/Codec/: BoolCodec.h  ByteCodec.h  DateKeyCodec.h  DateKeyLayout.h  DateTimeCodec.h  DoubleCodec.h  EnumCodec.h  Enums.h  ExpiryKeyCodec.h  ExpiryKeyLayout.h  FieldCodec.h  FieldCodec1.h  FieldCodecEnums.h  Fixed32Codec.h  Fixed64Codec.h  FlagCodec.h  FloatCodec.h  Int32Codec.h  Int64Codec.h  IntCodec.h  LengthCodec.h  LittleEndian32Codec.h  LittleEndian64Codec.h  LongCodec.h  MessageMetadata.h  MessageMetadataCodec.h  MessageTypeName.h  OptionKeyCodec.h  OptionKeyLayout.h  SFixed32Codec.h  SFixed64Codec.h  SInt32Codec.h  SInt64Codec.h  ShortCodec.h  Skipper.h  StringCodec.h  TagCodec.h  TagCodecEnums.h  Text1Codec.h  Text2Codec.h  (+12 more)
MLink/_c++/headers/Messages/: spiderrock_common.hpp  spiderrock_enum.hpp  spiderrock_mlink.hpp  spiderrock_mlink_base.hpp  spiderrock_mlink_linux.hpp  spiderrock_mlink_windows.hpp  spiderrock_protobuf.hpp  spiderrock_protobuf_base.hpp
MLink/_c++/headers/Messages/ClientConfig/: ClientFirmConfig.hpp  ClientPrivateSRSE.hpp  UserAuthentication.hpp  UserConfig.hpp  UserMessage.hpp
MLink/_c++/headers/Messages/ClientControl/: AccountRouteConfig.hpp  AltHedgePolicyMap.hpp  AltHedgeTargetMap.hpp  AltSymbolMap.hpp  AssetAccountControl.hpp  AvailableStockLocates.hpp  BookControl.hpp  ClientAccntStrategyMap.hpp  ClientAccountConfig.hpp  ClientStockLocate.hpp  CustomControl.hpp  ExpirationControl.hpp  FutureControl.hpp  GlobalRiskControl.hpp  HedgePolicyAlgoConfig.hpp  IndustryControl.hpp  MarRiskComposite.hpp  MarRiskControl.hpp  MarRiskControlTkOverride.hpp  MarRiskCounter.hpp  PositionHedgePolicyConfig.hpp  PositionHedgeTrigger.hpp  RiskClassControl.hpp  SectorControl.hpp  SpdrRiskControl.hpp  SpdrRiskCounter.hpp  StockLocateRequest.hpp  StockLocateResponse.hpp  StockPoolBorrowRate.hpp  StockThreshold.hpp  SymbolControl.hpp  TradeHedgePolicyConfig.hpp  UserDividendOverride.hpp  UserRateOverride.hpp
MLink/_c++/headers/Messages/ClientLive/: IndexQuote.hpp  MarketHoursConfig.hpp  NMSCircuitBreaker.hpp  OpraPrintType.hpp  OptionEOP.hpp  OptionOpenAuction.hpp  OptionOpenAuctionSummary.hpp  OptionPrint2.hpp  OptionPrintSummary.hpp  OptionSettlementMark.hpp  ProductPriceBand.hpp  ProductTradingStatus.hpp  ProductTradingStatusV2.hpp  RFQQuoteBroadcast.hpp  SOQConstituentSymbolMap.hpp  SOQStrikeRangeUpdate.hpp  StockAuctionSummary.hpp  StockExchImbalance.hpp  StockImbalance.hpp  StockRegSHOStatus.hpp  SyntheticExpiryQuote.hpp  SyntheticFutureQuote.hpp
MLink/_c++/headers/Messages/ClientRisk/: AccountRiskRecordV5.hpp  ClientBeta.hpp  CurrencyPositionRecordV5.hpp  CurrencyTransaction.hpp  EquityCorpActionRecordV5.hpp  ExpirationRiskRecordV5.hpp  FuturePositionRecordV5.hpp  FutureRiskDetailV5.hpp  FutureRiskSummaryV5.hpp  IndustryRiskRecordV5.hpp  OptionCorpActionRecordV5.hpp  OptionExAsRecordV5.hpp  OptionPositionRecordV5.hpp  ProductRiskDetailV5.hpp  ProductRiskSummaryV5.hpp  RiskAggGroupStateV5.hpp  RiskCubeDetailV5.hpp  SodCashRecordV5.hpp  SodClearingRecordV5.hpp  StockPositionRecordV5.hpp  SymbolMarginSummaryV5.hpp  SymbolRiskDetailV5.hpp  SymbolRiskSummaryV5.hpp  TradeCubeDetailV5.hpp
MLink/_c++/headers/Messages/ClientTheo/: OptionTheoVol.hpp  SpdrOptTheoRecord.hpp  SpdrTheoExp2PtCurve.hpp  SpdrTheoExpSurface.hpp  TheoSurfacePerf.hpp
MLink/_c++/headers/Messages/ClientTrading/: AutoHedgeSymbol.hpp  ExternAggGroupReport.hpp  RiskGroupCounter.hpp  SpdrAccntCancel.hpp  SpdrAllocationNotice.hpp  SpdrAllocationNoticeStatus.hpp  SpdrAutoHedgeControl.hpp  SpdrAutoHedgeState.hpp  SpdrAvailExecAllocation.hpp  SpdrAwayExecution.hpp  SpdrBrokerCancel.hpp  SpdrClientFirmRiskMgmt.hpp  SpdrDropExecution.hpp  SpdrDropExecutionAck.hpp  SpdrExchRiskDrop.hpp  SpdrExchRiskMgmt.hpp  SpdrExchRiskReset.hpp  SpdrExecutionAllocation.hpp  SpdrExecutionAllocationStatus.hpp  SpdrHedgePolicyState.hpp  SpdrMLegBrkrEvent.hpp  SpdrMLegBrkrState.hpp  SpdrOmniOrder.hpp  SpdrParentAllocation.hpp  SpdrParentAllocationStatus.hpp  SpdrParentBrkrEvent.hpp  SpdrParentBrkrState.hpp  SpdrParentBrokerSummary.hpp  SpdrParentCancel.hpp  SpdrParentExecution.hpp  SpdrParentLimit.hpp  SpdrParentOrder.hpp  SpdrParentReport.hpp  SpdrParentReviewRequest.hpp  SpdrParentReviewResponse.hpp  SpdrReleaseWaitTrigger.hpp  SpdrRiskExecution.hpp  SpdrRiskGroupCancel.hpp  SpdrRiskGroupControl.hpp  SpdrRouteCancel.hpp  (+7 more)
MLink/_c++/headers/Messages/EqtAnalytics/: StockBetaExt.hpp  StockEarningsCalendar.hpp  StockPrintMarkup.hpp  StockPrintSet.hpp  TickerAnalytics.hpp  UserSDivOverride.hpp
MLink/_c++/headers/Messages/EqtExchImbalance/: StockExchImbalanceV2.hpp
MLink/_c++/headers/Messages/EqtMarkData/: StockCloseMark.hpp  StockOpenMark.hpp
MLink/_c++/headers/Messages/EqtMktData/: StockBookQuote.hpp  StockPrint.hpp
MLink/_c++/headers/Messages/EqtSummaryData/: StockMarketSummary.hpp  StockMinuteBar.hpp
MLink/_c++/headers/Messages/EquityDefinition/: ExchSecurityDefinition.hpp  RegionalUnderlierComposite.hpp  TickerDefinition.hpp  TickerDefinitionExt.hpp
MLink/_c++/headers/Messages/FutAnalytics/: FuturePrintMarkup.hpp  FuturePrintSet.hpp
MLink/_c++/headers/Messages/FutMarkData/: FutureCloseMark.hpp  FutureOpenMark.hpp  FutureSettlementMark.hpp
(+2209 files in other folders)
